# nuclear_speckles_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  MLproject  README.md  pyproject.toml  train.ipynb  train.py
0.data_analysis_and_processing/: environment.yml  filter_nuclei.ipynb  filter_nuclei.py
0.data_analysis_and_processing/.ipynb_checkpoints/: filter_nuclei-checkpoint.ipynb
0.data_analysis_and_processing/cell_count_analysis/: well_cell_count_analysis.ipynb
0.data_analysis_and_processing/cross_zamirski_gold_feature_similarity/: cross_zamirski_gold_feature_similarity.ipynb
0.data_analysis_and_processing/filtered_single_cells/: filtered_single_cell_profiles.parquet
0.data_analysis_and_processing/mic_analysis/: treated_well_sirna_mic_analysis.ipynb  well_sirna_mic_analysis.ipynb
0.data_analysis_and_processing/nbconverted/: filter_nuclei.py
0.data_analysis_and_processing/utils/: Comparator.py  MIC.py  PairwiseCompare.py  ShuffledMIC.py
1.develop_vision_models/: ImageMetaDataset.py  ModelTrainer.py  environment.yml
1.develop_vision_models/fnet_model/: README  README.md  (+2 more)
1.regression_modelling/: 0.split_data.ipynb  1.train_models.ipynb  2.r2_figure.ipynb  3.find_sc_crops.ipynb  features_dict.yml  regression_model_env.yml  regression_modelling.sh
callbacks/: CallbackPipeline.py  Callbacks.py  base.py  early_stopping.py  evaluation.py  image_saving.py  logging.py  progress.py
losses/: L1Loss.py
metrics/: AbstractMetric.py  L1.py  L2.py  PSNR.py  SSIM.py
models/: UNet.py  UNetLayers.py
splitters/: HashSplitter.py
trainers/: UNetTrainer.py
(+53 files in other folders)
