[project]
name = "nuclear-speckles-analysis"
version = "0.1.0"
description = "Deep learning vision model for DAPI-to-gold image translation on cropped nuclei."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.8",
    "cityhash>=0.4.10",
    "cuda-python==12.9",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pynvim>=0.6.0",
    "scipy>=1.16.3",
    "scikit-image>=0.25.2",
    "tifffile>=2025.10.16",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchmetrics>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "callbacks",
    "datasets",
    "metrics",
    "models",
    "splitters",
    "trainers",
    "train.py",
]
